--- a/admin/views/reservation_manage.ejs
+++ b/admin/views/reservation_manage.ejs
@@ -51,11 +51,11 @@
         <div class="header">
           <span class="header_text">Lemon Tree</span>
           <div class="search-box">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 20 20" fill="none">
                 <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <input type="text" placeholder="이름 또는 번호 검색" class="searchInput">
-        </div>        
+            <input type="text" placeholder="이름 또는 번호 검색" id="searchInput">
+        </div>       
         </div>
         <div class="menu_bar">
           <div class="main_page"><a href="/admin/main" class="menu_text">메인</a></div>
@@ -86,19 +86,28 @@
                     <span  class="row_text date">예약 날짜</span>
                     <span  class="row_text time">시간</span>
                 </div>
-                <% reservations.forEach((reservation, index) => { %>
-                <div class="row <%= index % 2 === 0 ? 'a' : 'b' %>">
-                    <span  class="row_text name"><%=reservation.name %></span>
-                    <span  class="row_text number"><%=reservation.phone %></span>
-                    <span  class="row_text sex"><%=reservation.gender %></span>
-                    <span  class="row_text std"><%=reservation.std %></span>
-                    <span  class="row_text prog"><%=reservation.prog_name %></span>
-                    <span  class="row_text count"><%=reservation.prog_count %></span>
-                    <span  class="row_text note"><%=reservation.note %></span>
-                    <span  class="row_text date"><%=reservation.reservation_date %></span>
-                    <span  class="row_text time"><%=reservation.prog_time %></span>
+                <div class="row a">
+                    <span  class="row_text name">김신희</span>
+                    <span  class="row_text number">01022389960</span>
+                    <span  class="row_text sex">남자</span>
+                    <span  class="row_text std">예</span>
+                    <span  class="row_text prog">등관리(30min)</span>
+                    <span  class="row_text count">1/1회</span>
+                    <span  class="row_text note">없음</span>
+                    <span  class="row_text date">2023.09.30</span>
+                    <span  class="row_text time">17:00~17:30</span>
                 </div>
-                <% }); %>
+                <div class="row b">
+                    <span  class="row_text name">범진성</span>
+                    <span  class="row_text number">01000000000</span>
+                    <span  class="row_text sex">남자</span>
+                    <span  class="row_text std">아니오</span>
+                    <span  class="row_text prog">얼굴&데콜테관리(60min)</span>
+                    <span  class="row_text count">3/3회</span>
+                    <span  class="row_text note">없음</span>
+                    <span  class="row_text date">2023.09.30</span>
+                    <span  class="row_text time">17:30~18:30</span>
+                </div>
             </div>
           </div>
         </div>
