--- a/admin/views/login.ejs
+++ b/admin/views/login.ejs
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="login_page.css">
 </head>
 <body>
     <div class="login-container">
         <h1>Lemon Tree</h1>
         <form action="/login" method="post">
             <div class="form-group">
-                <label for="username">Username</label>
+                <label for="username">ID</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="form-group">
