--- a/admin/views/client_list.ejs
+++ b/admin/views/client_list.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원 목록</title>
     <link rel="stylesheet" type="text/css" href="/styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div class="manage_main">
@@ -52,7 +53,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                 <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <input type="text" placeholder="이름 또는 번호 검색" id="searchInput">
+            <input type="text" placeholder="이름 또는 번호 검색" id="searchInput" onkeydown="tablet_searchOnEnter(event)">
         </div>        
         </div>
         <div class="menu_bar">
@@ -70,7 +71,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
-                        <input type="text" placeholder="이름 또는 번호 검색" id="searchInput">
+                        <input type="text" placeholder="이름 또는 번호 검색" id="searchInput" onkeydown="searchOnEnter(event)">
                     </div>
                 </div>
                 <div class="row_top">
@@ -95,5 +96,6 @@
           </div>
         </div>
     </div>
+    <script src="/client_list_script.js"></script>
 </body>
 </html>
