--- a/admin/views/prog_manage.ejs
+++ b/admin/views/prog_manage.ejs
@@ -77,6 +77,7 @@
                 </div>
                 <div class="row_top prog">
                     <span  class="row_text prog">프로그램</span>
+                    <span  class="row_text time">시간</span>
                     <span  class="row_text count">횟수</span>
                     <span  class="row_text price">정상가</span>
                     <span  class="row_text discount">할인가</span>
@@ -88,6 +89,7 @@
                 <% programs.forEach((program, index) => { %>
                   <div class="row <%= index % 2 === 0 ? 'a' : 'b' %> prog">
                     <span class="row_text prog"><%= program.prog_name %></span>
+                    <span class="row_text time"><%= program.prog_time %></span>
                     <span class="row_text count"><%= program.prog_count %></span>
                     <span class="row_text price"><%= program.price %></span>
                     <span class="row_text discount"><%= program.discount %></span>
@@ -111,19 +113,23 @@
             <div class="prog info">
               <div class="info_box prog">
                 <span class="box_name prog">프로그램</span>
-                <input type="text" name="" class="inputbox prog">
+                <input type="text" name="prog_name" class="inputbox prog">
+              </div>
+              <div class="info_box time">
+                <span class="box_name prog">시간</span>
+                <input type="text" name="prog_time" class="inputbox time">
               </div>
               <div class="info_box number">
                 <span class="box_name prog">횟수</span>
-                <input type="text" name="" class="inputbox number">
+                <input type="text" name="prog_count" class="inputbox number">
               </div>
               <div class="info_box price">
                 <span class="box_name prog">정상가</span>
-                <input type="text" name="" class="inputbox price">
+                <input type="text" name="price" class="inputbox price">
               </div>
               <div class="info_box discount">
                 <span class="box_name prog">할인가</span>
-                <input type="text" name="" class="inputbox discount">
+                <input type="text" name="discount" class="inputbox discount">
               </div>
             </div>
           <div class="modal_footer">
