--- a/admin/views/client_list.ejs
+++ b/admin/views/client_list.ejs
@@ -63,37 +63,39 @@
           <div class="prog_manage"><a href="/admin/prog_manage" class="menu_text">프로그램관리</a></div>
         </div>
         <div class="main">
-          <div class="table">
-            <div class="table_content a">
-                <div class="table_title">
-                    <span class="table_title_text">회원목록</span>
-                    <div class="search-box">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        <input type="text" placeholder="이름 또는 번호 검색" id="searchInput" onkeydown="searchOnEnter(event)">
-                    </div>
-                </div>
-                <div class="row_top">
-                    <span  class="row_text name_client">이름</span>
-                    <span  class="row_text number_client">휴대폰 번호</span>
-                    <span  class="row_text dob">생년월일</span>
-                    <span  class="row_text sex_client">성별</span>
-                    <span  class="row_text std_client">재학생</span>
-                    <span  class="row_text agree">마케팅 동의</span>
-                </div>
-                <% clients.forEach((client, index) => { %>
-                <div class="row <%= index % 2 === 0 ? 'a' : 'b' %>">
-                    <span  class="row_text name_client"><%=client.name%></span>
-                    <span  class="row_text number_client"><%=client.phone%></span>
-                    <span  class="row_text dob"><%=client.birth%></span>
-                    <span  class="row_text sex_client"><%=client.gender%></span>
-                    <span  class="row_text std_client"><%=client.std%></span>
-                    <span  class="row_text agree"><%=client.consent%></span>
-                </div>
-                <% }); %>
+          <div class="table_title">
+            <span class="table_title_text">회원목록</span>
+            <div class="search-box">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                    <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                <input type="text" placeholder="이름 또는 번호 검색" id="searchInput" onkeydown="searchOnEnter(event)">
             </div>
           </div>
+          <table class="table a">
+            <thead class="table_content a">   
+              <tr class="row_top">
+                  <th  class="row_text name_client">이름</th>
+                  <th  class="row_text number_client">휴대폰 번호</th>
+                  <th  class="row_text dob">생년월일</th>
+                  <th  class="row_text sex_client">성별</th>
+                  <th  class="row_text std_client">재학생</th>
+                  <th  class="row_text agree">마케팅 동의</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% clients.forEach((client, index) => { %>
+              <tr class="row <%= index % 2 === 0 ? 'a' : 'b' %>">
+                  <td  class="row_text name_client"><%=client.name%></td>
+                  <td  class="row_text number_client"><%=client.phone%></td>
+                  <td  class="row_text dob"><%=client.birth%></td>
+                  <td  class="row_text sex_client"><%=client.gender%></td>
+                  <td  class="row_text std_client"><%=client.std%></td>
+                  <td  class="row_text agree"><%=client.consent%></td>
+              </tr>
+              <% }); %>
+            </tbody>
+          </table>
         </div>
     </div>
     <script src="/client_list_script.js"></script>
