sessionStorage이용한 회원정보 저장, 한타임별 예약 인원 제한, 로그아웃 기능 등

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -882,10 +882,10 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    padding: 10px;
+    padding: 10px;  
     border: 1px solid #E9EAEC;
     cursor: pointer;
-    
+    background: white;
 }
 
 .reservation-time-selected{
