--- a/admin/views/prog_manage.ejs
+++ b/admin/views/prog_manage.ejs
@@ -111,23 +111,23 @@
             <div class="prog info">
               <div class="info_box prog">
                 <span class="box_name prog">프로그램</span>
-                <input type="text" name="prog_name" class="inputbox prog">
+                <input type="text" name="prog_name" class="inputbox prog" placeholder="프로그램명을 입력">
               </div>
               <div class="info_box time">
                 <span class="box_name prog">시간</span>
-                <input type="text" name="prog_time" class="inputbox time">
+                <input type="text" name="prog_time" class="inputbox time" placeholder="30 or 60">
               </div>
               <div class="info_box number">
                 <span class="box_name prog">횟수</span>
-                <input type="text" name="prog_count" class="inputbox number">
+                <input type="text" name="prog_count" class="inputbox number" placeholder="1회 or 3회">
               </div>
               <div class="info_box price">
                 <span class="box_name prog">정상가</span>
-                <input type="text" name="price" class="inputbox price">
+                <input type="text" name="price" class="inputbox price" placeholder="ex)10,000">
               </div>
               <div class="info_box discount">
                 <span class="box_name prog">할인가</span>
-                <input type="text" name="discount" class="inputbox discount">
+                <input type="text" name="discount" class="inputbox discount" placeholder="ex)10,000">
               </div>
             </div>
           <div class="modal_footer">
