--- a/admin/views/reservation_manage.ejs
+++ b/admin/views/reservation_manage.ejs
@@ -64,42 +64,47 @@
           <div class="prog_manage"><a href="/admin/prog_manage" class="menu_text">프로그램관리</a></div>
         </div>
         <div class="main">
-          <div class="table">
-            <div class="table_content a">
-                <div class="table_title">
-                    <span class="table_title_text">예약관리</span>
-                    <div class="search-box">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                        <input type="text" placeholder="이름 또는 번호 검색" class="searchInput">
-                    </div>
-                </div>
-                <div class="row_top">
-                    <span  class="row_text name">이름</span>
-                    <span  class="row_text number">휴대폰 번호</span>
-                    <span  class="row_text sex">성별</span>
-                    <span  class="row_text std">재학생</span>
-                    <span  class="row_text prog">프로그램</span>
-                    <span  class="row_text count">횟수</span>
-                    <span  class="row_text note">비고</span>
-                    <span  class="row_text date">예약 날짜</span>
-                    <span  class="row_text time">시간</span>
-                </div>
-                <% reservations.forEach((reservation, index) => { %>
-                <div class="row <%= index % 2 === 0 ? 'a' : 'b' %>">
-                    <span  class="row_text name"><%=reservation.name %></span>
-                    <span  class="row_text number"><%=reservation.phone %></span>
-                    <span  class="row_text sex"><%=reservation.gender %></span>
-                    <span  class="row_text std"><%=reservation.std %></span>
-                    <span  class="row_text prog"><%=reservation.prog_name %></span>
-                    <span  class="row_text count"><%=reservation.prog_count %></span>
-                    <span  class="row_text note"><%=reservation.note %></span>
-                    <span  class="row_text date"><%=reservation.reservation_date %></span>
-                    <span  class="row_text time"><%=reservation.prog_time %></span>
-                </div>
-                <% }); %>
+          <div class="table_title">
+            <span class="table_title_text">예약관리</span>
+            <div class="search-box">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                    <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="searchOnEnter(event)">
             </div>
+          </div>
+          <table class="table a">
+              <thead class="table_content a">
+                <tr class="row_top">
+                    <th  class="row_text name">이름</th>
+                    <th  class="row_text number">휴대폰 번호</th>
+                    <th  class="row_text sex">성별</th>
+                    <th  class="row_text std">재학생</th>
+                    <th  class="row_text prog">프로그램</th>
+                    <th  class="row_text count">횟수</th>
+                    <th  class="row_text note">비고</th>
+                    <th  class="row_text date">예약 날짜</th>
+                    <th  class="row_text time">예약상태</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% reservations.forEach((reservation, index) => { %>
+                <tr class="row <%= index % 2 === 0 ? 'a' : 'b' %>">
+                    <td  class="row_text name"><%=reservation.name %></td>
+                    <td  class="row_text number"><%=reservation.phone %></td>
+                    <td  class="row_text sex"><%=reservation.gender %></td>
+                    <td  class="row_text std"><%=reservation.std %></td>
+                    <td  class="row_text prog"><%=reservation.prog_name %></td>
+                    <td  class="row_text count"><%=reservation.prog_count %></td>
+                    <td  class="row_text note"><%=reservation.note %></td>
+                    <td  class="row_text date"><%=reservation.reservation_date %>. <%=reservation.prog_time %></td>
+                    <td  class="row_text time"><%=reservation.reservation_status %></td>
+                    <td  class="row_text price" style="display: none;"><%=reservation.price %></td>
+                    <td  class="row_text discount" style="display: none;"><%=reservation.discount %></td>
+                </tr>
+                <% }); %>
+              </tbody>
+            </table>
           </div>
         </div>
     </div>
