페이징 추가

--- a/admin/views/client_list.ejs
+++ b/admin/views/client_list.ejs
@@ -96,6 +96,15 @@
               <% }); %>
             </tbody>
           </table>
+          <div class="pagination">
+            <ul class="pagination-list">
+                <% for (let page = 1; page <= totalPages; page++) { %>
+                    <li class="pagination-item">
+                        <a href="/admin/client_list?page=<%= page %>" class="pagination-link <%= page === currentPage ? 'active' : '' %>"><%= page %></a>
+                    </li>
+                <% } %>
+            </ul>
+          </div>
         </div>
     </div>
     <script src="/client_list_script.js"></script>
