--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -65,6 +65,37 @@ tbody{
   align-items: center;
   align-self: stretch;
 }
+/* Add this to your styles.css file or create a new CSS file and link it in your HTML */
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px; /* Adjust this value to control the vertical position */
+  width: 100%;
+}
+
+.pagination-list {
+  list-style: none;
+  padding: 0;
+}
+
+.pagination-item {
+  display: inline-block;
+  margin-right: 10px; /* Adjust this value to control the spacing between pagination items */
+}
+
+.pagination-link {
+  text-decoration: none;
+  color: #000;
+  padding: 5px 10px;
+  border: 1px solid #000;
+  border-radius: 4px;
+}
+
+.pagination-link.active {
+  background-color: #000;
+  color: #fff;
+}
+
 /*PC*/
 @media all and (min-width:1024px) { 
     .manage_main{
@@ -712,8 +743,10 @@ tbody{
       display: flex;
       min-width: 768px;
       align-items: center;
+      justify-content: center;
       flex: 1 0 0;
       align-self: stretch;
+      flex-direction: column;
     }
     .table{
       display: flex;
@@ -1165,6 +1198,7 @@ tbody{
       align-items: center;
       flex: 1 0 0;
       align-self: stretch;
+      flex-direction: column;
     }
     .table{
       display: flex;
