--- a/admin/views/search.ejs
+++ b/admin/views/search.ejs
@@ -65,13 +65,13 @@
         <div class="main">
           <div class="table_title">
             <span class="table_title_text">예약관리</span>
-            <div class="search-box" >
+            <div class="search-box">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                     <path d="M17.5 17.5L13.875 13.875M15.8333 9.16667C15.8333 12.8486 12.8486 15.8333 9.16667 15.8333C5.48477 15.8333 2.5 12.8486 2.5 9.16667C2.5 5.48477 5.48477 2.5 9.16667 2.5C12.8486 2.5 15.8333 5.48477 15.8333 9.16667Z" stroke="#667085" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 <form action="/admin/reservation_manage/search" method="get" style="display: flex;justify-content: space-between; min-width: 380px;">
-                  <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="searchOnEnter(event)">
-                  <input type="submit" value="검색">
+                    <input type="text" placeholder="이름 또는 번호 검색" name="searchData" class="searchInput" onkeydown="searchOnEnter(event)">
+                    <input type="submit" value="검색">
                 </form>
             </div>
           </div>
@@ -109,14 +109,14 @@
               </tbody>
             </table>
             <div class="pagination">
-              <ul class="pagination-list">
-                  <% for (let page = 1; page <= totalPages; page++) { %>
-                      <li class="pagination-item">
-                          <a href="/admin/reservation_manage?page=<%= page %>" class="pagination-link <%= page === currentPage ? 'active' : '' %>"><%= page %></a>
-                      </li>
-                  <% } %>
-              </ul>
-            </div>
+                <ul class="pagination-list">
+                    <% for (let page = 1; page <= totalPages; page++) { %>
+                        <li class="pagination-item">
+                            <a href="/admin/reservation_manage/search?page=<%= page %>&searchData=<%= encodeURIComponent(searchData) %>" class="pagination-link <%= page === currentPage ? 'active' : '' %>"><%= page %></a>
+                        </li>
+                    <% } %>
+                </ul>                
+              </div>
           </div>
         </div>
     </div>
@@ -127,7 +127,7 @@
           <div class="modal_header">
             <span class="modal_header_title">예약 상세정보</span>
             <div class="confirm_btn" data-action="">
-              <span class="confirm_btn_text" onclick="confirmBtn()">확정</span>
+              <span class="confirm_btn_text">확정</span>
             </div>
           </div>
           <div class="modal_main">
@@ -136,7 +136,7 @@
               <span class="client info_title">예약자 정보</span>
               <div class="info_box name">
                 <span class="box_name">이름</span>
-                <input type="text" name="" class="inputbox name" readonly>
+                <input type="text" name="" class="inputbox name">
               </div>
               <div class="info_box number">
                 <span class="box_name">번호</span>
@@ -144,7 +144,7 @@
               </div>
               <div class="info_box sex">
                 <span class="box_name">성별</span>
-                <input type="text" name="" class="inputbox sex" readonly>
+                <input type="text" name="" class="inputbox sex">
               </div>
               <div class="info_box note">
                 <span class= "box_name">비고</span>
@@ -166,7 +166,7 @@
               <div class="info_box fare">
                 <div class="fare_content">
                   <span class="fare_box">횟수</span>
-                  <input type="text" name="" class="inputbox count">
+                  <input type="text" name="" class="inputbox count" readonly>
                 </div>
                 <div class="fare_content">
                   <span class="fare_box">재학생</span>
@@ -174,11 +174,11 @@
                 </div>
                 <div class="fare_content">
                   <span class="fare_box">정상가</span>
-                  <input type="text" name="price" class="inputbox price">
+                  <input type="text" name="price" class="inputbox price" readonly>
                 </div>
                 <div class="fare_content">
                   <span class="fare_box">할인가</span>
-                  <input type="text" name="discount" class="inputbox discount">
+                  <input type="text" name="discount" class="inputbox discount" readonly>
                 </div>
               </div>
             </div>
@@ -186,7 +186,7 @@
           <div class="modal_footer">
             <span class="btn modify" data-action="">수정</span>
             <span class="btn pay" data-action="">결제</span>
-            <span class="btn cancel" onclick="cancelBtn()">예약 취소</span>
+            <span class="btn cancel" data-action="">예약 취소</span>
           </div>
         </div>
       </div>
